--- a/day5.html
+++ b/day5.html
@@ -47,6 +47,9 @@
     <h2>Hello World</h2>
     <button id="btn">Replace Text</button>
     <button id="btn2">Hide Text</button>
+    <br><br><br>
+    <a href="https://github.com/Adira08/js_Interview_Questions/blob/master/day5.js">Link to JS Page</a>
+    
     <script src="day5.js"></script>
 </body>
 
